--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -12,7 +12,7 @@ RUN apt-get update
 RUN apt-get install -y python3 python3-pip python-dev build-essential python3-venv ffmpeg
 
 RUN mkdir -p /code
-ADD . /code
+COPY . /code
 WORKDIR /code
 
 RUN pip3 install -r requirements.txt
