--- a/config/config.example.env
+++ b/config/config.example.env
@@ -1,6 +1,7 @@
 # local path where to store MongoDB
 MONGODB_PATH=./mongodb
 # MongoDB port
+MONGODB_HOST=chatgpt-mongo
 MONGODB_PORT=27017
 
 # Mongo Express port
