--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -43,7 +43,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          file: .docker/.Dockerfile
+          file: .docker/Dockerfile
           tags: |
             ${{ secrets.REGISTRY_URL }}/chatgpt-bot:latest
             ${{ secrets.REGISTRY_URL }}/chatgpt-bot:${{ steps.version.outputs.VALUE }}
